# rust_crates

ploars_crate/: Cargo.toml  Readme.md  data.csv  missing.csv
ploars_crate/src/: main.rs
rocket_crate/: Cargo.toml  Readme.md  request.http
rocket_crate/src/: main.rs
rocket_crate/templates/: hello.tera
structopt_crate/: Cargo.toml  Readme.md
