[package]
name = "rocket_crate"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
